# sanctum

./: .gitignore  LICENSE
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: cli.rs  config.rs  main.rs
cli/~/.config/nglue/: config.toml
server/: .env  Cargo.toml
server/migrations/: 20240211042544_create_users_table.sql  20240212081453_create_authtokens_table.sql
server/src/: auth.rs  db.rs  jwt.rs  main.rs  middleware.rs  routes.rs
server/src/models/: authtoken.rs  mod.rs  user.rs
ui/: package.json
ui/src/: App.scss  App.tsx
ui/src/components/Sidebar/: Sidebar.scss  Sidebar.tsx
ui/src/features/auth/: api.tsx  types.ts  useAuth.tsx
ui/src/hooks/useAuth/: useAuth.tsx
ui/src/routes/: index.tsx
ui/src/routes/Home/: Home.tsx
ui/src/routes/Login/: Login.scss  Login.tsx
